<resources>
    <string name="app_name">FufaApp</string>

    <!--Main screen -->
    <string name="world_cup">Mundial</string>
    <string name="champions">Champions</string>
    <string name="libertadores">Libertadores</string>
    <string name="free_tournament">Torneo Libre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_tournament_type">Elige el tipo de torneo</string>
    <string name="direct_elimination">Eliminación Directa</string>
    <string name="league">Liga</string>
    <string name="groups">Grupos</string>
    <string name="back_and_forward">Ida y vuelta</string>
    <string name="assign_team_randomly">Asignar equipo \naleatoriamente</string>
    <string name="participants">Participantes</string>
    <string name="start_tournament">Comenzar torneo</string>
    <string name="add_team">Agregar equipo</string>
    <string name="players_name">Nombre del jugador</string>
    <string name="team_name">Nombre del equipo</string>
    <string name="add_player_and_team">Agregar jugador &amp; equipo</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="position_table">Tabla de posiciones</string>
    <string name="calendar">Calendario</string>
    <string name="position_mark">"# " </string>
    <string name="team">Equipo</string>
    <string name="goals_for">"GF " </string>
    <string name="goals_against">"GC "</string>
    <string name="goal_difference">"DF "</string>
    <string name="points">"PTS "</string>
    <string name="vs">vs</string>
    <string name="round">Fecha</string>
    <string name="hyphen">-</string>
</resources>