<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.HomeFragment">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_world_cup"
        app:layout_constraintEnd_toStartOf="@+id/gl_main2"
        app:layout_constraintStart_toStartOf="@+id/gl_main1"
        app:layout_constraintTop_toBottomOf="@+id/iv_home_logo"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_main2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_main1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/bt_home_world_cup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/world_cup"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_champions"
        app:layout_constraintEnd_toEndOf="@+id/gl_main2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_main1" />

    <Button
        android:id="@+id/bt_home_champions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/champions"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_libertadores"
        app:layout_constraintEnd_toEndOf="@+id/gl_main2"
        app:layout_constraintStart_toStartOf="@id/gl_main1" />

    <Button
        android:id="@+id/bt_home_libertadores"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="@string/libertadores"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_free_tournament"
        app:layout_constraintEnd_toEndOf="@+id/gl_main2"
        app:layout_constraintStart_toStartOf="@id/gl_main1" />

    <Button
        android:id="@+id/bt_home_free_tournament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/free_tournament"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_main2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/gl_main1" />

    <ImageView
        android:id="@+id/iv_home_logo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fufa_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>