<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.free_tournament.league.ConfigFragment">

    <TextView
        android:id="@+id/tv_freetournament_league_back_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/back_and_forward"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_freetournament_league_assign_team_randomly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/assign_team_randomly"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_freetournament_league_back_forward"
        app:layout_constraintTop_toBottomOf="@+id/tv_freetournament_league_back_forward" />

    <TextView
        android:id="@+id/tv_freetournament_league_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/participants"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_freetournament_league_assign_team_randomly"
        app:layout_constraintTop_toBottomOf="@+id/tv_freetournament_league_assign_team_randomly" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_freetournament_league_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/bt_freetournament_league_start_tournament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="@+id/tv_freetournament_league_back_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/tv_freetournament_league_back_forward"
        app:layout_constraintTop_toTopOf="@+id/tv_freetournament_league_back_forward" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="@+id/tv_freetournament_league_assign_team_randomly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/tv_freetournament_league_assign_team_randomly"
        app:layout_constraintTop_toTopOf="@+id/tv_freetournament_league_assign_team_randomly" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_freetournament_league_start_tournament"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/start_tournament"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_league_players"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/fab_freetournament_league_add_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_freetournament_league_player"
        app:layout_constraintTop_toBottomOf="@id/tv_freetournament_league_player"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_player" />

</androidx.constraintlayout.widget.ConstraintLayout>